[package]
name = "kinder"
version = "0.1.1"
authors = ["Kit Freddura <kitfreddura@gmail.com>"]
description = "Kinder is a small crate which adds an algebraic structure to common Rust structs and emulates higher order types"
repository="https://github.com/KitFreddura/Kinder"
readme="./README.md"
keywords=["functor", "monad", "applicative", "monoid", "kinder"]
license-file="./LICENSE.txt"

[dependencies]

